--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
+    "start:sb": "yarn prestart && cross-env IS_STORYBOOK=storybook react-native start --reset-cache",
+    "storybook": "start-storybook -p 6006",
+    "prestart": "yarn update-stories",
+    "update-stories": "sb-rn-get-stories --config-path .ondevice",
     "test": "jest"
   },
   "dependencies": {
@@ -17,18 +21,47 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/slider": "^4.5.0",
     "@react-native/babel-preset": "^0.73.18",
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
     "@react-native/typescript-config": "^0.73.1",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-controls": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-knobs": "^7.0.2",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/addon-ondevice-actions": "^6.5.7",
+    "@storybook/addon-ondevice-backgrounds": "^6.5.7",
+    "@storybook/addon-ondevice-controls": "^6.5.7",
+    "@storybook/addon-ondevice-notes": "^6.5.7",
+    "@storybook/addon-react-native-web": "^0.0.21",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.7",
+    "@storybook/react-native": "^6.5.7",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-react-docgen-typescript": "^1.5.1",
+    "babel-plugin-react-native-web": "^0.19.10",
+    "babel-plugin-root-import": "^6.6.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.19.0",
+    "html-loader": "^4.2.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
+    "react-dom": "^18.2.0",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-web": "^0.19.10",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=18"
